# cmake-base

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
SomeLibrary/: CMakeLists.txt
SomeLibrary/include/psi/: Adder.h
SomeLibrary/src/: Adder.cpp
SomeLibrary/tests/: Adder.test.cpp  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt
python/src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
